deploy/observability/grafana-prometheus/overlay/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  replicas: 3
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
        - name: node-exporter
          image: quay.io/prometheus/node-exporter:latest
          volumeMounts:
            - name: prometheus-pv
              mountPath: /host
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: prometheus-pv
          persistentVolumeClaim:
            claimName: prometheus-pvc
