deploy/observability/grafana-prometheus/overlay/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
spec:
  type: ClusterIP
  selector:
    app: node-exporter
  ports:
    - protocol: TCP
      port: 9100
      targetPort: 9100
