deploy/observability/grafana-prometheus/overlay/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.rutu-sh.com
      secretName: prometheus-tls-secret
  rules:
    - host: prometheus.rutu-sh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-svc
                port:
                  name: web
  defaultBackend:
    service:
      name: grafana-svc
      port:
        number: 3000
